Upgrades and layout updates

--- a/src/assets/css/site.css
+++ b/src/assets/css/site.css
@@ -11,13 +11,12 @@
 
 .bolt {
   animation: spin infinite 20s linear;
-  height: 40vmin;
   cursor: pointer;
   border: solid #ffffff 13px;
   border-radius: 144px;
 }
-.bolt.downloading {
-  animation: spin infinite 1s linear;
+.bolt.spining {
+  animation: spin infinite 0.2s linear;
 }
 
 .header {
@@ -30,8 +29,14 @@
   color: #61dafb;
 }
 
+.upgrades {
+}
+
+.upgrades li {
+}
+
 footer {
-  background: #20242b;
+  background: #33b5e6;
   position: absolute;
   bottom: 0;
   width: 100%;
