--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -626,3 +626,14 @@ pre tt:after {
     font-size: 100%;
   }
 }
+.flex-grid {
+  display: flex;
+}
+.col {
+  flex: 1;
+}
+@media only screen and (max-width: 400px) {
+  .flex-grid {
+    display: block;
+  }
+}
